<resources>
    <string name="hello">Hello World, BCCActivity!</string>
    <string name="app_name">BCC</string>
    <string name="bcc_logo">BCC</string>
    <string name="take_photo">Take Photo</string>
    <string name="about_bcc_content"></string>
    <string name="import_contacts">Import Contacts</string>
    <string name="export_contacts">Export Contacts</string>
    <string name="manage_ie_contacts">Manage</string>
    <string name="ocr_services">Business Card Preference</string>
    <string name="export_services">Import Export Preference</string>
    <string name="save_photo_title">Save Photo</string>
    <string name="save_photo_key">save_photo_key</string>
    <string name="save_photo_desc">Save images from camera to SD card</string>
    <string name="save_default_account_key">save_default_account_key</string>
    <string name="save_default_account_title">Save to Default Account</string>
    <string name="save_default_account_desc">Default account will be used instead of showing dialog on each contact save</string>
    <string name="add_photo">Capture Photo</string>
    <string name="import_photo">Import Photo</string>
    <string name="manage_photos">Manage</string>
    <string name="preferences_company_url">http://www.google.com</string>
    <string name="empty">No Records Present yet......</string>
    <string name="personName">Business Card Name</string>
    <string name="personEmail">Business Card Email</string>
    <string name="personPhone">Business Card Phone</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string-array name="fileFormat">
		<item name="csv">CSV File</item>
		<item name="xml">XML File</item>
		<item name="json">JSON File</item>
	</string-array>
	<string-array name="fileFormatCodes">
		<item name="csv">CSV</item>
		<item name="xml">XML</item>
		<item name="json">JSON</item>
	</string-array>
	<string-array name="csvfileFormat">
	    <item name="default">Default</item>
		<item name="google">Google CSV Format</item>
		<item name="outlook">Outlook CSV Format</item>
		<item name="apple">Apple Address Book Format</item>
	</string-array>
	<string-array name="csvfileFormatCodes">
	    <item name="default">Default</item>
		<item name="google">Google</item>
		<item name="outlook">Outlook</item>
		<item name="apple">Apple</item>
	</string-array>
	<string-array name="phoneType">
	    <item name="TYPE_HOME">Home</item>
		<item name="TYPE_MOBILE">Mobile</item>
		<item name="TYPE_WORK">Work</item>
		<item name="TYPE_FAX_WORK">Fax Work</item>
		<item name="TYPE_FAX_HOME">Fax Home</item>
		<item name="TYPE_PAGER">Pager</item>
		<item name="TYPE_OTHER">Other</item>
		<item name="TYPE_CALLBACK">Call Back</item>
		<item name="TYPE_CAR">Car</item>
		<item name="TYPE_COMPANY_MAIN">Primary Company</item>
		<item name="TYPE_ISDN">ISDN</item>
		<item name="TYPE_OTHER_FAX">Other Fax</item>
		<item name="TYPE_RADIO">Radio</item>
		<item name="TYPE_TELEX">TeleX</item>
		<item name="TYPE_TTY_TDD">TTY TDD</item>
		<item name="TYPE_WORK_MOBILE">Work Mobile</item>
		<item name="TYPE_WORK_PAGER">Work Pager</item>
		<item name="TYPE_ASSISTANT">Assistant</item>
		<item name="TYPE_MMS">MMS</item>
	</string-array>
	<string-array name="phoneTypeCodes">
	    <item name="TYPE_HOME">1</item>
		<item name="TYPE_MOBILE">2</item>
		<item name="TYPE_WORK">3</item>
		<item name="TYPE_FAX_WORK">4</item>
		<item name="TYPE_FAX_HOME">5</item>
		<item name="TYPE_PAGER">6</item>
		<item name="TYPE_OTHER">7</item>
		<item name="TYPE_CALLBACK">8</item>
		<item name="TYPE_CAR">9</item>
		<item name="TYPE_COMPANY_MAIN">10</item>
		<item name="TYPE_ISDN">11</item>
		<item name="TYPE_MAIN">12</item>
		<item name="TYPE_OTHER_FAX">13</item>
		<item name="TYPE_RADIO">14</item>
		<item name="TYPE_TELEX">15</item>
		<item name="TYPE_TTY_TDD">16</item>
		<item name="TYPE_WORK_MOBILE">17</item>
		<item name="TYPE_WORK_PAGER">18</item>
		<item name="TYPE_ASSISTANT">19</item>
		<item name="TYPE_MMS">20</item>
	</string-array>
   <string name="mezzofanti_appName">Business Card Capture</string>
    <string name="mezzofanti_ocrResult">Your ocr result here</string>
  	<string name="mezzofanti_msg_default_status">Press camera button to start OCR.</string>
  	<string name="mezzofanti_status_text">Your status here</string>
	<string name="mezzofanti_ocr_processing_title">Text-recognition in progress:</string>
	<string name="mezzofanti_ocr_processing_body_begin">using the</string>
	<string name="mezzofanti_ocr_processing_body_end">dictionary.</string>
	<string name="mezzofanti_status_bar_vertical">Vertical </string>
	<string name="mezzofanti_status_bar_horizontal">Horizontal </string>
	<string name="mezzofanti_status_bar_updown">up/down</string>
	<string name="mezzofanti_status_bar_ocr_dict">OCR dictionary:</string>
	<string name="mezzofanti_status_bar_orientation">orientation:</string>
    <string name="mezzofanti_nolanginstalled_title">Warning</string>
    <string name="mezzofanti_nolanginstalled_body">No languages installed, please install using "menu->preferences->download languages"</string>
    <string name="mezzofanti_nolanginstalled_ok">OK</string>
    <string name="resultsactivity_add_word_to_dictionary_yes">Yes</string>
    <string name="resultsactivity_add_word_to_dictionary_no">No</string>
	<string name="resultsactivity_addword2dict_title">Add word to dictionary</string>
	<string name="resultsactivity_addword2dict_message1">Do you want to add the word</string>
	<string name="resultsactivity_addword2dict_message2">to the</string>
	<string name="resultsactivity_addword2dict_message3">dictionary?</string>
    <string name="resultsactivity_selected_word">Selected word: </string>
    <string name="resultsactivity_ocr_trust">OCR trust: </string>
    <string name="resultsactivity_ocr_valid_word">Valid</string>
    <string name="resultsactivity_ocr_valid_word2">word:</string>
    <string name="resultsactivity_resultsmode_selected_text">Selected text: </string>
    <string name="resultsactivity_resultsmode_selected_word_none">Selected word: none</string>
    <string name="resultsactivity_resultsmode_selected_all_text">All text: translate/email/sms.</string>
    <string name="resultsactivity_resultsmode_mean_confidence">Mean OCR confidence is</string>
    <string name="resultsactivity_resultsmode_selected_single_word">Single-word: translate/google/dictionary/wiki.</string>
    <string name="resultsactivity_resultsmode_selected_multiple_words">Multiple-words: translate/google/dictionary/wiki.</string>
    <string name="resultsactivity_resultsmode_edit_mode_back">To end Edit mode, press Back.</string>
	<string name="resultsactivity_ocrbadresults_title">Warning: </string>
	<string name="resultsactivity_ocrbadresults_msg1">The OCR confidence is</string>
	<string name="resultsactivity_ocrbadresults_msg2">(max=100) \n\n
This may happen for one of the following reasons: \n
- the OCR was optimized for speed, thus the quality is low (consider changing "Settings->speed vs quality")\n
- the angle of the camera relative to the text was more than the OCR could handle (consider taking the snapshot with the smallest angle to the text as possible)\n
- there was too much light in the picture (consider changing the position of the paper)\n\n</string>
	<string name="resultsactivity_ocrbadresults_ok">OK</string>
    <string name="mezzofanti_capturemode_statustext_switchtosmall">switch to small capture mode</string>
    <string name="mezzofanti_capturemode_statustext_switchtolarge">switch to large capture mode</string>
    <string name="mezzofanti_capturemode_statustext_switchtolarge2">delete-last / go-to-results</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About us</string>
    <string name="menu_feedback">Feedback</string>
    <string name="preferences_helpTitle">Help</string>
    <string name="preferences_msg_help_step1">Welcome to BCC - Business Card Capture.\n
    The application at a glance:\n
1. Select a text of interest (ex: menu at a restaurant, tourist information sign, etc), and take a photo. The internal-OCR engine will start Text Recognition.\n 
2. Use BCC to translate the text (or parts of it) to any one of over forty languages, or to google it on the web or on Wikipedia.\n
    \n
    More insides about step 1 - Grabbing the picture and settings\n\n
    - you can switch between line/full-screen recognition\n
    - take the picture either with the "camera button" or by "long-press" on the screen
    - you can select either horizontal or vertical orientation while taking the picture, when the focus button is pressed you will observe indicators about your orientation\n
    - please make sure the camera focuses: green=focused, red=unfocused
    - the OCR will work best if the text is parallel to one of the margins (note: with a small tolerance of ~15 degree angle)\n
    - once the picture is taken, the OCR will start processing. Depending on the picture quality, and the amount of text, the processing may take roughly between 1-20 seconds.\n
	- to improve the speed of the OCR (in the detriment of the quality) you can use select from options "Settings->Speed/Quality ratio"\n
	- the OCR uses some language-specific files, by default the application has the English language installed, if you want to install another language to use with OCR, please go to "Settings->Download new languages"\n
	- if you are taking pictures with uneven light source, you may consider using the "Settings->Use uneven light filter" (note: this will add to the OCR processing time)\n
	- please select "Settings->Skip intro at startup" to enable/disable the intro message when the application starts\n
	- please select "Settring->Restore factory settings" if you want to switch back to the default settings.\n
	\n
	Enjoy using BCC! ;)\n
	The Wizard Team.\n
	\n
	PS: Please do not hesitate to write us feedback "Menu->Feedback". We are appreciating your thoughts.\n
    </string>
    <string name="preferences_aboutTitle">About us</string>
    <string name="preferences_msg_about">
    Business Card Capture(BCC):\n
     Capture your business card to digital form and create contacts directly to phone.\n 
     You can export contacts to Google, Outlook or Apple file format.\n
     You can also import contacts of your Google or Outlook or Apple.\n
    More about the engine:\n
    - the internal text-recognition engine: Tesseract 2.03 - developed by Google and released under the Apache License 2.0\n
    - the translation engine - based on "Google translate" - API developed by Google and released under the Apache License\n
    - all code is source free, released under Apache License 2.0, for more information and the code please visit out website\n
    \n
	Enjoy using Business Card Capture! ;)\n
	The Development Team.\n
	\n
	PS: Please do not hesitate to write us feedback "Menu->Feedback". We are appreciating your thoughts.\n
    </string>
	<string name="preferences_name">Settings</string>
	<string name="preferences_general_title">General settings</string>
	<string name="preferences_skip_intro_at_startup">Skip intro at start</string>
	<string name="preferences_OCR_title">OCR settings</string>
	<string name="preferences_use_image_ligth_filter">Use uneven light filter</string>
	<string name="preferences_display_debug_image">Display internal OCR image</string>
	<string name="preferences_speed_quality">Speed/Quality ratio</string>
	<string name="preferences_set_OCR_language">Set OCR dictionary language</string>
	<string name="preferences_download_language">Download new languages</string>
	<string name="preferences_min_overall_confidence">Min overall confidence</string>
	<string name="preferences_min_word_confidence">Min word confidence</string>
</resources>